Re-enable JDK16 inference tests